# home-problem

./: .env.example  Cargo.toml  build.nix  readme.md  rust-analyzer.toml  rust-toolchain.toml  shell.nix  tarpaulin.toml
.github/workflows/: rust.yml
benches/: my_benchmark.rs
ci-cd/: configmap.yml  deployment.yml  generate_schema.sh  migrate.sh
gutils/: Cargo.toml  readme.md
gutils/src/: b64.rs  consts.rs  env.rs  fuzzy_search.rs  lib.rs  logger.rs  memory.rs  random.rs
gutils/src/compress/: mod.rs
gutils/src/fs/: zip.rs
gutils/src/traits/: iter.rs  lambda.rs  mod.rs  numeric.rs  string.rs  vec.rs
gutils/src/uri/: benches.rs  dec.rs  enc.rs  mod.rs
gutils/src/vba_macros_lmao/: fancy_regex.rs  mod.rs  xml2struct.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
proc_macros/src/cacher/: db.rs  disk.rs  mod.rs
proc_macros/src/exec/: async_try_block.rs  mod.rs  try_block.rs
proc_macros/src/memory_tracker/: enable.rs
proc_macros/src/utils/: get_env_compile_time.rs  mod.rs
server_a/: Cargo.toml
server_a/src/: lib.rs  main.rs
server_a/src/api/: entity.rs  mod.rs  service.rs  service_counter.rs  service_on_start.rs
server_a/src/api/activity/: mod.rs
server_a/src/api/ticker/: mod.rs
server_a/src/utils/: async_utils.rs  env.rs  fs.rs  mod.rs  request.rs  test.rs  utility_types.rs
server_a/src/utils/date_time/: aggregation.rs
src/: lib.rs  lib_std_impl.rs  lib_without_stds.rs  partial_ord_method.rs
