[workspace]
resolver = "2"
members = [
  "server_a",
  "gutils",
  "proc_macros",
]

[profile.test]
opt-level = 0
incremental = true
codegen-units = 1024
lto = "off"

#Low performance, but quick to compile
[profile.release_quick]
inherits = "test"
incremental = true

# [profile.test.package."*"]
# opt-level = 0
# incremental = false
#
# [profile.test_cicd]
# inherits = "test"
# opt-level = 0
# incremental = false
# codegen-units = 1024
# lto = "off"
#
# [profile.test_cicd.package."*"]
# inherits = "test_cicd"

# High performance
[profile.release_performance]
inherits = "release"
codegen-units = 1
incremental = false
lto = "fat"

# Small binary
[profile.release_small]
inherits = "release"
codegen-units = 1
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
