[package]
name = "gutils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["alloc", "derive", "std"] }
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.8"
fancy-regex = "0.14.0"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
memory-stats = "1.2.0"
num-traits = "0.2.19"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
regex-macro = "0.3.0"
serde = "1.0.218"
sha256 = "1.5.0"
tokio = { version = "1.32.0", features = ["full"] }
zip = "4.2.0"
zstd = "0.13.3"

[dev-dependencies]
serial_test = "3.2.0"
