[package]
name = "server_a"
version = "0.1.1"
edition = "2021"

[lib]
name = "server_a"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
base64 = "0.22.1"
cached = { version = "0.55.1", features = ["async"] }
chrono = "0.4.41"
dashmap = "6.1.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger = "0.11.8"
futures = "0.3.31"
gutils = { version = "*", path = "../gutils" }
log = "0.4.27"
proc_macros = { path = "../proc_macros" }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
regex-macro = "0.3.0"
reqwest = { version = "0.12.15", features = [ "gzip", "http2", "default-tls" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
struct_iterable = "0.1.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
thiserror = "2.0"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
unidecode = "0.3.0"
utoipa = { git="https://github.com/lalvesl/utoipa.git", rev = "ac0a245", features = ["actix_extras", "chrono"] }
utoipa-actix-web = { git="https://github.com/lalvesl/utoipa.git", rev = "ac0a245", features = [] }
utoipa-redoc = { git="https://github.com/lalvesl/utoipa.git", rev = "ac0a245", features = ["actix-web"] }
# Zip crate appers suspicious, When pull resquest accept, update to get version from crates.io
utoipa-swagger-ui = { git="https://github.com/lalvesl/utoipa.git", rev = "ac0a245", features = ["actix-web"] }
xmltojson = "0.2.0"
serde_with = "3.12.0"

[build-dependencies]

[dev-dependencies]
tokio-test = "0.4.4"
dhat = "0.3.3"
serial_test = "3.2.0"
